[package]
name = "rotsniff"
version = "0.1.1"
authors = ["Jimmy Bergström <me@kwarf.com>"]
edition = "2021"
description = "A tool to catalog files and their hashes in order to detect corrupted or missing files."
readme = "README.md"
repository = "https://github.com/Kwarf/rotsniff"
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
blake2 = "0.10"
clap = { version = "4.3", features = ["derive"] }
csv = "1.2"
flate2 = "1.0.26"
hex = "0.4"
memmap2 = "0.7"
rayon = "1.7"
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.3"
