[package]
name = "rotsniff"
version = "0.2.1"
authors = ["Jimmy Bergström <me@kwarf.com>"]
edition = "2021"
description = "A tool to catalog files and their hashes in order to detect corrupted or missing files."
readme = "README.md"
repository = "https://github.com/Kwarf/rotsniff"
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
blake2 = "0.10"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
digest = "0.10"
flate2 = "1.0"
hex = "0.4"
rayon = "1.10"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.5"
